--- a/Pulumi.yaml
+++ b/Pulumi.yaml
@@ -4,7 +4,7 @@ runtime:
   name: python
   options:
     toolchain: pip
-    virtualenv: ..\venv
+    virtualenv: venv
 config:
   pulumi:tags:
     value:
